2002-08-13  Jody Goldberg <jody@gnome.org>

	* src/regutf8.c : Add REG_OK

2002-08-12  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-08-12  Jody Goldberg <jody@gnome.org>

	* src/formats.c : remove the 8 bit characters until the gettext
	  infrasructure accepts them as utf8 without warning.

2002-08-12  Jody Goldberg <jody@gnome.org>

	* src/style-border.c (style_border_none_set_color) : Morten found the
	  colour leak.  While we're here lets fix the the GC warnings.

	* src/sheet-style.c (sheet_style_update_grid_color) : fix the leak
	  here too.

	* src/sheet-object-graphic.c : Add a quicky line based polygon object.

2002-08-11  Jody Goldberg <jody@gnome.org>

	* src/workbook-view.c (wb_view_save_as) : Doh! order these correctly.

	* src/sheet-object-cell-comment.c (cell_set_comment) : fix ref leak
	  when adding a comment.

	* src/expr-name.c (expr_name_remove) : tidy old cruft.
	(expr_name_shutdown) : Use expr_name_list_destroy.
	(expr_name_list_destroy) : make checking more anal.

2002-08-11  Jody Goldberg <jody@gnome.org>

	* configure.in : Add the planperfect plugin

	* src/mstyle.c : Add shrink to fit.
	* src/xml-io.c (xml_write_style) : and here.
	(xml_read_style) : And here.

2002-08-09  Morten Welinder  <terra@diku.dk>

	* src/search.c (match_is_word): Make utf8 safe.
	(calculate_replacement): Ditto.
	(search_match_string): Ditto.
	(search_replace_string): Ditto.

2002-08-09  Zbigniew Chyla  <cyba@gnome.pl>

	* src/plugin-service.[ch]
	(PluginServiceClass::get_description): New method
	(PluginService): Added saved_description field
	(plugin_service_general_get_description,
	plugin_service_file_opener_get_description,
	plugin_service_file_saver_get_description,
	plugin_service_function_group_get_description,
	plugin_service_plugin_loader_get_description,
	plugin_service_ui_get_description):
	Implementations of the new method