@@ -1,3 +1,8 @@
+2002-08-13  Morten Welinder  <terra@diku.dk>
+
+	* src/regutf8.h (REG_EPAREN, REG_EBRACE, REG_EESCAPE, REG_OK):
+	Move macros here.
+
 2002-08-13  Jody Goldberg <jody@gnome.org>
 
 	* src/regutf8.c : Add REG_OK
