@@ -27,24 +27,6 @@
 
 // ----------------------------------------------------------------------------
 
-#ifndef REG_EPAREN
-#define REG_EPAREN REG_BADPAT
-#endif
-
-#ifndef REG_EBRACE
-#define REG_EBRACE REG_BADPAT
-#endif
-
-#ifndef REG_EESCAPE
-#define REG_EESCAPE REG_BADPAT
-#endif
-
-#ifndef REG_OK
-#define REG_OK REG_NOERROR
-#endif
-
-// ----------------------------------------------------------------------------
-
 #define MP_SRCEXT 1
 #define MP_DSTEXT 2
 #define MP_SUBEXP 4
